test/files/invalid/union_vector.stderr
[0m[1m[38;5;9merror[0m[1m: Unsupported type[0m
  [0m[34m┌─[0m test/files/invalid/union_vector.fbs:3:10
  [0m[34m│[0m
[0m[34m3[0m [0m[34m│[0m   foos: [[0m[31mFoo[0m];
  [0m[34m│[0m          [0m[31m^^^[0m [0m[31mUnions in vectors are not currently supported[0m

Error: Bailing because of errors
